force-app/main/default/objects/ppmail__Mail_Sending_Batch__c/ppmail__Mail_Sending_Batch__c.object-meta.xml
<CustomObject>
    <description>Represents a batch of emails that are sent as part of a larger mail sending task. It is used to break down large email sends into smaller, more manageable chunks, which can improve performance and reliability.</description>
    <label>Mail Sending Batch</label>
    <nameField>
        <displayFormat>MSB-{0000000}</displayFormat>
        <label>Mail Sending Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mail Sending Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>