force-app/main/default/objects/ppmail__Mail_Sending_Batch__c/fields/ppmail__BCC_Names__c.field-meta.xml
<CustomField>
    <fullName>ppmail__BCC_Names__c</fullName>
    <description>A comma-separated list of names for the BCC recipients in this batch.</description>
    <label>BCC Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>