force-app/main/default/objects/ppmail__Mail_Sending_Batch__c/fields/ppmail__Mail_Sending__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Mail_Sending__c</fullName>
    <description>The Mail Sending task that this batch belongs to. This is a master-detail relationship, meaning that this batch is a child of the Mail Sending task.</description>
    <label>Mail Sending</label>
    <referenceTo>ppmail__Mail_Sending__c</referenceTo>
    <relationshipLabel>Mail Sending Batches</relationshipLabel>
    <relationshipName>Mail_Sending_Batches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>