force-app/main/default/objects/ppmail__Mail_Sending_Batch__c/fields/ppmail__Separate_Email_for_Each_Recipient__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Separate_Email_for_Each_Recipient__c</fullName>
    <description>A formula field that indicates whether a separate email should be sent to each recipient in this batch. This is inherited from the parent Mail Sending task.</description>
    <formula>ppmail__Mail_Sending__r.ppmail__Separate_Email_for_Each_Recipient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Separate Email for Each Recipient</label>
    <type>Checkbox</type>
</CustomField>