force-app/main/default/objects/ppmail__Mail_Sending_Batch__c/fields/ppmail__Status__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Status__c</fullName>
    <description>The current status of the mail sending batch.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Sending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>